<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SourceActivity">

    <Button
            android:text="init"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/init" android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp" android:onClick="initClick"/>
    <Button
            android:text="destory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/destory"
            android:onClick="destoryClick"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/init"/>
    <Button
            android:text="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/start" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/destory" android:onClick="start"/>
    <Button
            android:text="stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stop" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/start" android:onClick="stop"/>
    <ListView
            android:layout_width="245dp"
            android:layout_height="280dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp" android:id="@+id/listview"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/result" android:layout_marginBottom="108dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>